# flight_path_inference

./: CITATION.cff  README.md  SECURITY.md  pyproject.toml
.github/workflows/: python-package.yml
src/flight_path_inference/: trajectory_gp.py  trajectory_particlefilter.py
src/flight_path_inference/trajectory/: gp.py  particlefilter.py
tests/: test_trajectory_gp.py  test_trajectory_particlefilter.py
