# Python package
# https://packaging.python.org/en/latest/
# https://packaging.python.org/en/latest/guides/writing-pyproject-toml

# Build backend options
[build-system]
# https://setuptools.pypa.io/en/latest/
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

# Package metadata
# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/#basic-information
[project]
name = "flight_path_inference"
description = "3D flight path inference using bee tracking images with retroreflection detection methods."
readme = "README.md"
dynamic = ["version"]
# Status of Python versions https://devguide.python.org/versions/
requires-python = ">= 3.8"
# Required packages
dependencies = [
    "numpy==1.*",
    # Particle filter
    "scipy==1.*",
    "particles==0.*",
    # Gaussian process
    "tensorflow-cpu==2.*",
    "tensorflow-probability==0.*",
    "tf-keras==2.*"
]
authors = [
    { name = "Michael Smith", email = "m.t.smith@sheffield.ac.uk" },
]
maintainers = [
    { name = "Michael Smith", email = "m.t.smith@sheffield.ac.uk" },
    { name = "Joe Heffer", email = "j.heffer@sheffield.ac.uk" },
    { name = "Shi Min Chua", email = "s.chua@sheffield.ac.uk " },
]
license = { file = "LICENSE" }
keywords = ["bee-tracking", "machine-learning", "computer-vision"]

# PyPI classifiers
# https://pypi.org/classifiers/
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

# Optional dependencies https://peps.python.org/pep-0631/
[project.optional-dependencies]
# Automatic testing framework
test = [
    "flake8",
    "pytest"
]

[tool.setuptools.dynamic]
version = {attr = "flight_path_inference.__version__"}

[project.urls]
Homepage = "https://www.sheffield.ac.uk/dcs/people/academic/michael-smith"
Repository = "https://github.com/SheffieldMLtracking/flight_path_inference"
Issues = "https://github.com/SheffieldMLtracking/flight_path_inference/issues"
Changelog = "https://github.com/SheffieldMLtracking/flight_path_inference/releases"
Documentation = "https://github.com/SheffieldMLtracking"

# https://docs.pytest.org/en/7.1.x/reference/customize.html#pyproject-toml
[tool.pytest.ini_options]
# https://docs.python.org/3/using/cmdline.html#envvar-PYTHONPATH
pythonpath = ["src"]
